--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ With extensive experience in research and engineering, I have developed and depl
         </span>
       </div>
       <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
-        <p>Finished my work at <a href="https://vectorinstitute.ai/">Vector Institude</a> as a Deployment of AI Models Technical Facilitator for their AI Model Bootcamp.</p>
+        <p>I got a contract from  <a href="https://vectorinstitute.ai/">Vector Institude</a> as a Machine Learning Engineer Technical Advisor for the Data Readiness and Model Deployment (DaRMoD) program.</p>
       </div>
     </div>
 
@@ -176,7 +176,7 @@ With extensive experience in research and engineering, I have developed and depl
         </span>
       </div>
       <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
-        <p>I got a contract from  <a href="https://vectorinstitute.ai/">Vector Institude</a> as a Deployment of AI Models Technical Facilitator for their AI Model Bootcamp.</p>
+        <p>I got a contract from  <a href="https://vectorinstitute.ai/">Vector Institude</a> as a Machine Learning Engineer Technical Advisor for the AI/ML Deployment Bootcamp.</p>
       </div>
     </div>
 
