--- a/index.html
+++ b/index.html
@@ -160,7 +160,19 @@ With extensive experience in research and engineering, I have developed and depl
 <div class="row p-0">
       <div class="col-sm-2 p-0">
         <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3">
-          Oct 30, 2024
+          Feb 18, 2025
+        </span>
+      </div>
+      <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
+        <p>I started a new role as a Machine Learning Resarcher - 3D Computer Vision at <a href="https://www.huawei.com/ca/" target="_blank">Huawei</a>.</p>
+      </div>
+    </div>
+
+
+<div class="row p-0">
+      <div class="col-sm-2 p-0">
+        <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3">
+          Dec 27, 2024
         </span>
       </div>
       <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
