--- a/teaching/index.html
+++ b/teaching/index.html
@@ -184,6 +184,7 @@
         
       </div>
     </div>
+    <h6 class=" mt-2 mt-sm-0" style="font-style: normal">Winter 2025: Teaching Assistant, Lab Instructor</h6>
     <h6 class=" mt-2 mt-sm-0" style="font-style: normal">Summer 2023: Teaching Assistant, Lab Instructor</h6>
     <h6 class=" mt-2 mt-sm-0" style="font-style: normal">Fall 2022: Teaching Assistant, Lab Instructor</h6>
     <!--
@@ -206,6 +207,7 @@
    
       </div>
     </div>
+    <h6 class="mt-2 mt-sm-0" style="font-style: normal">Fall 2024: Teaching Assistant</h6>
     <h6 class="mt-2 mt-sm-0" style="font-style: normal">Fall 2023: Teaching Assistant</h6>
     <h6 class="mt-2 mt-sm-0" style="font-style: normal">Fall 2021: Teaching Assistant</h6>
     <!--
