--- a/index.html
+++ b/index.html
@@ -168,6 +168,16 @@ With extensive experience in research and engineering, I have developed and depl
       </div>
     </div>
 
+<div class="row p-0">
+      <div class="col-sm-2 p-0">
+        <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3">
+          Feb 3, 2025
+        </span>
+      </div>
+      <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
+        <p>Won the first place at the <a href="https://www.inceptionstudio.org/" target="_blank">Inception Studio</a> hackathon as team cosmic.</p>
+      </div>
+    </div>
 
 <div class="row p-0">
       <div class="col-sm-2 p-0">
