--- a/projects/Data Analytics/CitiBike/index.html
+++ b/projects/Data Analytics/CitiBike/index.html
@@ -71,8 +71,8 @@ h3 {text-align: center;}
               </li>
             
           <li class="nav-item ">
-                  <a class="nav-link" href="/talks/">
-                    Talks
+                  <a class="nav-link" href="/presentations/">
+                    Presentations
                     
                   </a>
               </li>
