--- a/projects/Deep-Learning-Course/Pose-Estimation/index.html
+++ b/projects/Deep-Learning-Course/Pose-Estimation/index.html
@@ -70,8 +70,8 @@ table, th, td {
               </li>
             
           <li class="nav-item ">
-                  <a class="nav-link" href="/talks">
-                    Talks
+                  <a class="nav-link" href="/presentations">
+                    Presentations
                     
                   </a>
               </li>
