--- a/publications/index.html
+++ b/publications/index.html
@@ -69,8 +69,8 @@
               </li>
             
           <li class="nav-item ">
-                  <a class="nav-link" href="/talks/">
-                    Talks
+                  <a class="nav-link" href="/presentations/">
+                    Presentations
                     
                   </a>
               </li>
