--- a/talks/index.html
+++ b/talks/index.html
@@ -69,8 +69,8 @@
               </li>
             
             <li class="nav-item navbar-active font-weight-bold">
-                  <a class="nav-link" href="/talks/">
-                    Talks
+                  <a class="nav-link" href="/presentations/">
+                    Presentations
                     <span class="sr-only">(current)</span>
                   </a>
               </li>
