--- a/presentations/index.html
+++ b/presentations/index.html
@@ -118,7 +118,7 @@
         <div class="card">
           <img class="card-img-top" src="/assets/img/demo.jpg" alt="project thumbnail"/>
           <div class="card-body">
-            <h5 class="card-title" style="font-style: normal">Inseption Studio Hackathon Demo</h5>
+            <h5 class="card-title" style="font-style: normal">Inception Studio Hackathon Demo</h5>
           
             <div class="row ml-1 mr-1 p-0">
               <a class="badge green waves-effect font-weight-light mr-1" href="https://youtu.be/JOeEwqRMbSk" target="_blank" style="font-style: normal">Video</a>
