--- a/index.html
+++ b/index.html
@@ -128,21 +128,33 @@
         <div class="col-xs-12 col-sm-6 p-0 pt-2 pb-sm-2 pb-4 pl-sm-4 text-center" style="float: right;">
           <img class="profile-img img-responsive" src="/assets/img/prof_pic.jpg" />
         </div>
-        I am an ML Researcher specializing in 3D Computer Vision and Computer Graphics, leveraging machine learning to push the boundaries of 3D content generation, view synthesis, and image manipulation. My expertise spans deep learning, generative AI, and computer vision, with a strong focus on diffusion models and neural radiance fields (NeRFs).
+
+        <p>
+    I am a Machine Learning Researcher specializing in 3D Computer Vision and Generative AI, currently working at <a href="https://www.huawei.com/en/huaweitech/publication/winwin/AI/a-robotic-vision-of-the-future" target="_blank">Huawei's 3D Vision Team</a>. My work focuses on real-time face reenactment using advanced techniques such as Diffusion Models and 3D Gaussian Splatting.
+  </p>
+  <p>
+    Previously, I contributed to <a href="https://www.ubisoft.com/en-us/studio/laforge" target="_blank">Ubisoft La Forge</a> as an R&D Intern, where I developed a geometry-aware texture synthesis tool that streamlined artist workflows and significantly reduced face model creation time. My research during this period led to publications at top-tier conferences like CVPR.
+  </p>
+  <p>
+    I hold a Master's degree in Electrical and Computer Engineering from York University, where I was advised by <a href="https://www.biomotionlab.ca/niko-troje/" target="_blank">Prof. Nikolaus Troje</a> and co-advised by <a href="https://mbrubake.github.io/" target="_blank">Prof. Marcus A. Brubaker</a>. My thesis focused on AI-assisted pipelines for 3D face avatar generation.
+  </p>
+  <p>
+    As a <a href="https://vectorinstitute.ai/programs/vector-faculty-affiliates/" target="_blank">Vector Faculty Affiliate Researcher</a>, I am committed to advancing the intersection of computer graphics, computer vision, and deep learning. My expertise spans deep learning, generative AI, and computer vision, with a strong focus on diffusion models and neural radiance fields (NeRFs).
+  </p>
+  <p>
+    I am passionate about pushing the boundaries of 3D content generation, view synthesis, and image manipulation, aiming to develop innovative solutions that bridge the gap between research and real-world applications.
+  </p>
+  
+  <!--       I am an ML Researcher specializing in 3D Computer Vision and Computer Graphics, leveraging machine learning to push the boundaries of 3D content generation, view synthesis, and image manipulation. My expertise spans deep learning, generative AI, and computer vision, with a strong focus on diffusion models and neural radiance fields (NeRFs).
 
 At <a href="https://toronto.ubisoft.com/ubisoft_la_forge_expands_globally/" target="_blank">Ubisoft La Forge</a>, I worked on designing generative solutions for constructing ultra-realistic face models, reducing model creation time by over 90%. I integrated state-of-the-art generative models such as StyleGAN, Real-ESRGAN, and Pix2Pix, optimizing large-scale training pipelines on GPU clusters. I also worked with <a href="https://vectorinstitute.ai/">Vector Institude</a> as a Deployment of AI Models Technical Facilitator for their AI Model Bootcamp.
 
 I graduated with a master's degree in Electrical and Computer Engineering at York University, conducted research on view synthesis and image manipulation under the guidance of <a href="https://www.biomotionlab.ca/" target="_blank">Prof. Nikolaus Troje</a> and <a href="https://mbrubake.github.io/" target="_blank">Marcus A. Brubaker</a>. I am also a Vector Faculty Affiliate Researcher, contributing to the advancement of AI in Canada.
 
-With extensive experience in research and engineering, I have developed and deployed robust machine learning models in areas such as deep learning, natural language processing, and data analysis. I am passionate about advancing the intersection of computer graphics, computer vision, and deep learning, with a particular interest in diffusion models and NERFs.
+With extensive experience in research and engineering, I have developed and deployed robust machine learning models in areas such as deep learning, natural language processing, and data analysis. I am passionate about advancing the intersection of computer graphics, computer vision, and deep learning, with a particular interest in diffusion models and NERFs. -->
 
 
- <!--        <p> Hi there I am David, a motivated and driven individual currently working as an R&D intern at <a href="https://toronto.ubisoft.com/ubisoft_la_forge_expands_globally/" target="_blank">Ubisoft La Forge</a> in Toronto. 
-
-        My expertise lies in the field of deep learning and its application in computer vision. At Ubisoft La Forge, I utiliz cutting-edge deep learning models to develop tools that assist artists in creating models more efficiently.</p> 
-
-        <p> In addition to my work at Ubisoft, I am also a research assistant at York University supervised by <a href="https://www.biomotionlab.ca/" target="_blank">Prof. Nikolaus Troje</a> and co-supervised by <a href="https://mbrubake.github.io/" target="_blank">Marcus A. Brubaker</a>, where I specialize in the application of deep learning in computer vision. With my strong background in deep learning and passion for developing innovative solutions, I am sure to make a significant impact in his field. </p>
- -->
+ 
     </div>
 </div>
 
