--- a/index.html
+++ b/index.html
@@ -168,7 +168,17 @@ With extensive experience in research and engineering, I have developed and depl
 <div class="news mt-3 p-0">
   <h1 class="title mb-4 p-0">News</h1>
 
-
+<div class="row p-0">
+      <div class="col-sm-2 p-0">
+        <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3">
+          Feb 27, 2024
+        </span>
+      </div>
+      <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
+        <p>Our work <a href="https://cvpr2023.thecvf.com/">MosAR: Monocular Semi-Supervised Model for Avatar Reconstruction using Differentiable Shading</a>  got accepted to the <b>CVPR 2024</b> conference in Seattle, Washington.</p>
+      </div>
+    </div>
+    
 <div class="row p-0">
       <div class="col-sm-2 p-0">
         <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3">
@@ -215,7 +225,7 @@ With extensive experience in research and engineering, I have developed and depl
     </div>
 
 
-  <div class="row p-0">
+  <!-- <div class="row p-0">
       <div class="col-sm-2 p-0">
         <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3">
           July 15, 2024
@@ -224,11 +234,11 @@ With extensive experience in research and engineering, I have developed and depl
       <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
         <p>I volunteered as Master of Ceremonies (MC) for <a href="https://www.torontomachinelearning.com/">Toronto Machine Learning Society (TMLS)</a> conference.</p>
       </div>
-    </div>
+    </div> -->
 
   
 
-<div class="row p-0">
+<!-- <div class="row p-0">
       <div class="col-sm-2 p-0">
         <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3">
           March 15, 2024
@@ -237,7 +247,7 @@ With extensive experience in research and engineering, I have developed and depl
       <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
         <p>After 15 months I finihsed my work at <a href="https://toronto.ubisoft.com/" target="_blank">Ubisoft La Forge (Toronto)</a></p>
       </div>
-    </div>
+    </div> -->
 
 
 
@@ -248,13 +258,13 @@ With extensive experience in research and engineering, I have developed and depl
         </span>
       </div>
       <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
-        <p>Our work <a href="https://cvpr2023.thecvf.com/">MosAR: Monocular Semi-Supervised Model for Avatar Reconstruction using Differentiable Shading</a>  got accepted to the CVPR 2024 conference in Seattle, Washington.</p>
+        <p>Our work <a href="https://cvpr2023.thecvf.com/">MosAR: Monocular Semi-Supervised Model for Avatar Reconstruction using Differentiable Shading</a>  got accepted to the <b>CVPR 2024</b> conference in Seattle, Washington.</p>
       </div>
     </div>
 
 
 
-        <div class="row p-0">
+        <!-- <div class="row p-0">
       <div class="col-sm-2 p-0">
         <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3">
           Jun 18-23, 2023
@@ -263,10 +273,10 @@ With extensive experience in research and engineering, I have developed and depl
       <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
         <p>Attended the <a href="https://cvpr2023.thecvf.com/">CVPR</a> 2023 conference at Vancouver.</p>
       </div>
-    </div>
+    </div> -->
 
 
-      <div class="row p-0">
+     <!--  <div class="row p-0">
       <div class="col-sm-2 p-0">
         <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3">
           Jun 12-14, 2023
@@ -276,7 +286,7 @@ With extensive experience in research and engineering, I have developed and depl
         <p>I volunteered as Master of Ceremonies (MC) for <a href="https://www.torontomachinelearning.com/">Toronto Machine Learning Society (TMLS)</a> conference.
       </p>
       </div>
-    </div>
+    </div> -->
 
 
   
@@ -331,7 +341,7 @@ With extensive experience in research and engineering, I have developed and depl
       </div>
     </div>
   
-    <div class="row p-0">
+    <!-- <div class="row p-0">
       <div class="col-sm-2 p-0">
         <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3">
           Apr 14, 2021
@@ -341,7 +351,7 @@ With extensive experience in research and engineering, I have developed and depl
         <p> I got accepted to York University Masters of Applied Science program.
 </p>
       </div>
-    </div>
+    </div> -->
   
 
       <div class="row p-0">
