--- a/index.html
+++ b/index.html
@@ -175,10 +175,10 @@ With extensive experience in research and engineering, I have developed and depl
         </span>
       </div>
       <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
-        <p>Our work <a href="https://cvpr2023.thecvf.com/">MosAR: Monocular Semi-Supervised Model for Avatar Reconstruction using Differentiable Shading</a>  got accepted to the <b>CVPR 2024</b> conference in Seattle, Washington.</p>
+        <p>Our work <a href="https://ubisoft-laforge.github.io/character/GeoAwareTextures3D/index.html">Geometry-Aware Texture Generation for 3D Head Modeling with Artist-driven Control</a>  got accepted to the <b href="https://cveu.github.io/">CVPR Workshop 2025</b> conference in Nashville, Tennessee.</p>
       </div>
     </div>
-    
+
 <div class="row p-0">
       <div class="col-sm-2 p-0">
         <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3">
@@ -258,7 +258,7 @@ With extensive experience in research and engineering, I have developed and depl
         </span>
       </div>
       <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
-        <p>Our work <a href="https://cvpr2023.thecvf.com/">MosAR: Monocular Semi-Supervised Model for Avatar Reconstruction using Differentiable Shading</a>  got accepted to the <b>CVPR 2024</b> conference in Seattle, Washington.</p>
+        <p>Our work <a href="https://ubisoft-laforge.github.io/character/mosar/">MosAR: Monocular Semi-Supervised Model for Avatar Reconstruction using Differentiable Shading</a>  got accepted to the <b>CVPR 2024</b> conference in Seattle, Washington.</p>
       </div>
     </div>
 
