--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ With extensive experience in research and engineering, I have developed and depl
         </span>
       </div>
       <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
-        <p>Our work <a href="https://ubisoft-laforge.github.io/character/GeoAwareTextures3D/index.html">Geometry-Aware Texture Generation for 3D Head Modeling with Artist-driven Control</a>  got accepted to the <b href="https://cveu.github.io/">CVPR Workshop 2025</b> conference in Nashville, Tennessee.</p>
+        <p>Our work (with Ubisoft) <a href="https://ubisoft-laforge.github.io/character/GeoAwareTextures3D/index.html">Geometry-Aware Texture Generation for 3D Head Modeling with Artist-driven Control</a>  got accepted to the <b href="https://cveu.github.io/">CVPR Workshop 2025</b> conference in Nashville, Tennessee.</p>
       </div>
     </div>
 
